--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,9 @@ package:
 source:
   url: https://github.com/{{ name }}/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
   sha256: 679e36daf1be40e187e3488e6aa44e33e27dd426ba1947f816563d20d063e02a
+  patches:
+    - no-test-drive.patch  # [win]
+    - meson-wrap.patch  # [unix]
 
 build:
   number: 0
