--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/toml-f/toml-f/releases/download/v0.4.0/toml-f-{{ version }}.tar.xz
+  url: https://github.com/toml-f/toml-f/releases/download/v{{ version }}/toml-f-{{ version }}.tar.xz
   sha256: 6b49013d3bcd1043494c140d7b2da6b0cedd87648e4fc5179fcfcf41226d3232
   patches:
     - no-test-drive.patch
