--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,8 @@ build:
 
 requirements:
   build:
+    - {{ stdlib('c') }}  # [unix]
+    - {{ stdlib('m2w64_c') }}  # [win]
     - {{ compiler('c') }}  # [unix]
     - {{ compiler('fortran') }}  # [unix]
     - {{ compiler('m2w64_c') }}  # [win]
