--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,12 +18,9 @@ build:
 
 requirements:
   build:
-    - {{ stdlib('c') }}  # [unix]
-    - {{ stdlib('m2w64_c') }}  # [win]
-    - {{ compiler('c') }}  # [unix]
-    - {{ compiler('fortran') }}  # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
-    - {{ compiler('m2w64_fortran') }}  # [win]
+    - {{ stdlib('c') }}
+    - {{ compiler('c') }}
+    - {{ compiler('fortran') }}
     - meson
     - ninja
     - toml-test
